--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,6 +12,14 @@ commands:
   status:
     description: role command
     usage: /<command>
+  start:
+    description: Game Start Command
+    usage: /<command>
+    permission: JinroCraft.admin
+    permission-message: You don't have <permission>
+  vote:
+    description: Vote Command
+    usage: /<command> <player>
 permissions:
   JinroCraft.admin:
     description: Gives access to JinroCraft admin commands
