--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,9 @@
 name: JinroCraft
 version: 1.0.0
 main: net.atlantis.jinrocraft.JinroCraft
-api-version: 1.16
+#api-version forced be downgrade.
+#1.16 -> 1.14
+api-version: 1.14
 
 commands:
   role:
